--- a/expert-notes-react/package.json
+++ b/expert-notes-react/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.363.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
